# MinaAI-VAIC

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  eslint.config.mjs  mina.cookies  package.json  prd.md  tsconfig.json
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260717_0001_create_system_metadata.py  20260718_0002_create_auth_tables.py  20260718_0003_create_school_assignment_core.py  20260718_0004_create_curriculum_content.py  20260718_0005_create_diagnostic_engine.py  20260718_0006_create_remediation_transfer_flow.py  20260718_0007_create_student_skill_mastery.py
backend/app/: __init__.py  main.py
backend/app/api/: errors.py
backend/app/cli/: cleanup_sessions.py  reset_dev_database.py  seed_dev_content.py  seed_dev_core.py  seed_dev_users.py  validate_content.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: base.py  session.py
backend/app/repositories/: assignment_repository.py  auth_session_repository.py  classroom_repository.py  content_repository.py  diagnostic_repository.py  school_repository.py  teacher_repository.py  user_repository.py
backend/app/schemas/: auth.py  base.py  content.py  diagnostic.py  health.py  student.py  teacher.py
backend/app/services/: auth_service.py  content_service.py  diagnostic_service.py  diagnostic_state_machine.py  learning_flow_service.py  learning_state_machine.py  mastery_service.py  skill_graph_service.py  student_service.py  teacher_analytics_service.py  (+1 more)
(+314 files in other folders)
