[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mina-backend"
version = "0.1.0"
description = "Minimal Mina AI backend foundation."
requires-python = ">=3.11,<3.13"
dependencies = [
  "alembic==1.14.1",
  "fastapi==0.115.6",
  "pwdlib[argon2]==0.2.1",
  "pydantic-settings==2.7.1",
  "psycopg[binary]==3.2.3",
  "sqlalchemy==2.0.36",
  "uvicorn[standard]==0.34.0",
]

[project.optional-dependencies]
dev = [
  "httpx==0.28.1",
  "pytest==8.3.4",
  "ruff==0.8.4",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["app/tests"]
markers = [
  "integration: tests that exercise multiple application layers",
  "postgres: tests that require a live PostgreSQL database",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"
